# cinder-specs

./: .gitignore  .gitreview  README.rst  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/test/: redirect-tests.txt
specs/: template.rst
specs/2023.1/: extend-volume-completion-action.rst  placeholder.rst  remove-me.rst
specs/2023.2/: dedicated-volume-backup-status-field.rst  extend-volume-completion-action.rst  remove-me.rst
specs/2024.1/: extend-volume-completion-action.rst  quota-system.rst  remove-me.rst
specs/2024.2/: LUKS-image-encryption.rst  extend-volume-completion-action.rst  remove-me.rst  user-visible-information-in-volume-types.rst
specs/2025.1/: migration-progress-in-volume-details.rst  openapi.rst
specs/2026.1/: LUKS-image-encryption.rst  openapi.rst  remove-me.rst  restrict-backup-container-creation.rst
specs/juno/: abc-volume-drivers.rst  affinity-antiaffinity-filter.rst  cinder-storwize-driver-qos.rst  configurable-ssh-host-key-policy.rst  consistency-groups.rst  create-states.rst  datera-driver.rst  debug-translation-removal.rst  deprecate_v1_api.rst  emc-vmax-driver-juno-update.rst  emc-vnx-direct-driver-juno-update.rst  generic-volume-migration.rst  huawei-dsware-driver.rst  huawei-sdshypervisor-driver.rst  hyper-v-smbfs-volume-driver.rst  i18n-enablement.rst  incremental-backup.rst  limit-volume-copy-bandwidth.rst  log-translation-hints.rst  oracle-zfssa-cinder-driver.rst  pool-aware-cinder-scheduler.rst  private-volume-types.rst  pure-iscsi-volume-driver.rst  restblock-driver.rst  smbfs-volume-driver.rst  support-GPFS-nas-ibmnas-driver.rst  support-reset-state-for-backup.rst  support-volume-backup-for-qcow2.rst  support-volume-num-weighter.rst  task-log.rst  unit-test-cases-for-cinder-scripts.rst  united-policy.json-in-cinder.rst  valid-states-api.rst  (+5 more)
tests/: test_titles.py
(+216 files in other folders)
