[metadata]
name = cinder-specs
description = Openstack Cinder Project Development Specifications
long_description = file: README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = http://specs.openstack.org/openstack/cinder-specs/
classifiers =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
